HTML content complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,80 @@
 	<nav>
 		<h2>Mira Tarek</h2>
 		<h4>| Pretty mira | Art by Mira</h4>
+
+		<section class="social-media">
+			<a href="#">Youtube</a>
+			<a href="#">Facebook</a>
+			<a href="#">Instagram</a>
+		</section>
+
+		<section class="page-anchors">
+			<a href="#commission-rules">Commission Rules</a>
+			<a href="#showcase">Showcase</a>
+		</section>
 	</nav>
 
+	<section class="welcome-section">
+		<h1>WELCOME!</h1>
+	</section>
+
+	<section id="commission-rules">
+		<header>
+			<h1>COMMISSION</h1>
+			<h4>Want a Commission?</h4>
+		</header>
+
+		<section class="commission-description">
+			<h2>How to Submit a Commission</h2>
+			<ol>
+				<li>Go to my YouTube channel and choose any video.</li>
+				<li>Send a Super Chat with the details of your commission request.</li>
+				<li>Include the price from the table below in your Super Chat.</li>
+			</ol>
+			<h2>Commission Guidelines</h2>
+			<ul>
+				✅ Prices are listed below – please match your Super Chat amount to the appropriate tier.
+			</ul>
+			<ul>
+				✅ Commissions are completed in the order they are received.
+			</ul>
+			<ul>
+				✅ No refunds once the commission has been accepted.
+			</ul>
+			<ul>
+				✅ I reserve the right to decline requests that don’t align with my content or guidelines.
+			</ul>
+		</section>
+		
+		<table>
+  			<tr>
+    			<th>Type</th>
+    			<th>Price</th>
+    			<th>Description</th>
+  			</tr>
+  			<tr>
+    			<td>Pencil</td>
+    			<td>15$</td>
+    			<td>Charcoal Pencil Portrait</td>
+  			</tr>
+  			<tr>
+    			<td>Color Pencil</td>
+    			<td>25$</td>
+    			<td>Charcoal Color Pencil Portrait</td>
+  			</tr>
+  			<tr>
+  				<td>Color Markers</td>
+  				<td>25$</td>
+  				<td>Ink Color Marker Portrait</td>
+  			</tr>
+		</table>
+
+		<h2>Thank you for your support! I can’t wait to create something awesome for you. 🚀✨</h2>
+	</section>
+
+	<section id="showcase">
+		<h1>SHOWCASE</h1>
+		<h4>Some of My Drawings!</h4>
+	</section>
 </body>
 </html>
