--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Mira Tarek - Commission</title>
+
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	
@@ -11,20 +13,21 @@
 		<h2>Mira Tarek</h2>
 		<h4>| Pretty mira | Art by Mira</h4>
 
+		<section class="page-anchors">
+			<a href="#commission-rules">Commission Rules</a>
+			<a href="#showcase">Showcase</a>
+		</section>
+
 		<section class="social-media">
 			<a href="#">Youtube</a>
 			<a href="#">Facebook</a>
 			<a href="#">Instagram</a>
 		</section>
-
-		<section class="page-anchors">
-			<a href="#commission-rules">Commission Rules</a>
-			<a href="#showcase">Showcase</a>
-		</section>
 	</nav>
 
 	<section class="welcome-section">
 		<h1>WELCOME!</h1>
+		<h4>Scroll Down For More!</h4>
 	</section>
 
 	<section id="commission-rules">
