--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 
 		<section class="page-anchors">
 			<a href="#commission-rules">Commission Rules</a>
-			<a href="#showcase">Showcase</a>
 		</section>
 
 		<section class="social-media">
-			<a href="#">Youtube</a>
-			<a href="#">Facebook</a>
-			<a href="#">Instagram</a>
+			<a href="https://www.youtube.com/@PrettyMira">Youtube</a>
+			<a href="https://www.facebook.com/share/15yzmk27Bs">Facebook</a>
+			<a href="https://www.instagram.com/artbymira08">Instagram</a>
 		</section>
 	</nav>
 
@@ -45,16 +44,18 @@
 			</ol>
 			<h2>Commission Guidelines</h2>
 			<ul>
+				<li>
 				✅ Prices are listed below – please match your Super Chat amount to the appropriate tier.
-			</ul>
-			<ul>
+				</li>
+				<li>
 				✅ Commissions are completed in the order they are received.
-			</ul>
-			<ul>
+				</li>
+				<li>
 				✅ No refunds once the commission has been accepted.
-			</ul>
-			<ul>
+				</li>
+				<li>
 				✅ I reserve the right to decline requests that don’t align with my content or guidelines.
+				</li>
 			</ul>
 		</section>
 		
@@ -72,7 +73,7 @@
   			<tr>
     			<td>Color Pencil</td>
     			<td>25$</td>
-    			<td>Charcoal Color Pencil Portrait</td>
+    			<td>Color Pencil Portrait</td>
   			</tr>
   			<tr>
   				<td>Color Markers</td>
@@ -81,12 +82,9 @@
   			</tr>
 		</table>
 
-		<h2>Thank you for your support! I can’t wait to create something awesome for you. 🚀✨</h2>
+		<h2 class="thxs-h2">Thank you for your support! I can’t wait to create something awesome for you. 🚀✨</h2>
 	</section>
 
-	<section id="showcase">
-		<h1>SHOWCASE</h1>
-		<h4>Some of My Drawings!</h4>
-	</section>
+	<p id="copyright">all rights reserved - copyright &copy 2025</p>
 </body>
 </html>
