add responsive feature

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 	<title>Mira Tarek - Commission</title>
 
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="responsive-style.css">
 </head>
 <body>
 	
 	<nav>
-		<h2>Mira Tarek</h2>
-		<h4>| Pretty mira | Art by Mira</h4>
-
-		<section class="page-anchors">
-			<a href="#commission-rules">Commission Rules</a>
+		<section class="name">
+			<h2>Mira Tarek</h2>
+			<h4>| Pretty mira | Art by Mira</h4>
 		</section>
 
 		<section class="social-media">
@@ -58,32 +57,36 @@
 				</li>
 			</ul>
 		</section>
-		
-		<table>
-  			<tr>
-    			<th>Type</th>
-    			<th>Price</th>
-    			<th>Description</th>
-  			</tr>
-  			<tr>
-    			<td>Pencil</td>
-    			<td>15$</td>
-    			<td>Charcoal Pencil Portrait</td>
-  			</tr>
-  			<tr>
-    			<td>Color Pencil</td>
-    			<td>25$</td>
-    			<td>Color Pencil Portrait</td>
-  			</tr>
-  			<tr>
-  				<td>Color Markers</td>
-  				<td>25$</td>
-  				<td>Ink Color Marker Portrait</td>
-  			</tr>
-		</table>
+
+		<section class="prices">
+			<table>
+	  			<tr>
+	    			<th>Type</th>
+	    			<th>Price</th>
+	    			<th>Description</th>
+	  			</tr>
+	  			<tr>
+	    			<td>Pencil</td>
+	    			<td>15$</td>
+	    			<td>Charcoal Pencil Portrait</td>
+	  			</tr>
+	  			<tr>
+	    			<td>Color Pencil</td>
+	    			<td>25$</td>
+	    			<td>Color Pencil Portrait</td>
+	  			</tr>
+	  			<tr>
+	  				<td>Color Markers</td>
+	  				<td>25$</td>
+	  				<td>Ink Color Marker Portrait</td>
+	  			</tr>
+			</table>
+		</section>
 
 		<h2 class="thxs-h2">Thank you for your support! I can’t wait to create something awesome for you. 🚀✨</h2>
 	</section>
+
+
 
 	<p id="copyright">all rights reserved - copyright &copy 2025</p>
 </body>
